Remove bug-report link in header, because it does not fit in there anymore

--- a/app/stylesheets/_layout.less
+++ b/app/stylesheets/_layout.less
@@ -48,21 +48,6 @@ body {
     }
   }
   
-  #center_header {
-    float: left;
-    width: 20em;
-    margin-left: 5em;
-    font-size: 1.2em;
-    text-align: center;
-    padding: 1em;
-    
-    background-color: #AED1F1;
-    
-    border: 2px solid #012C54;
-    border-top: none;
-    .rounded_corners_bottom;
-  }
-  
   #right_header {
     float: right;
     font-size: 1.6em;
